--- a/infrastructure/website/index.html
+++ b/infrastructure/website/index.html
@@ -11,9 +11,15 @@
 </head>
 
 <body>
-  <div hx-ext="ws" ws-connect="wss://eyx5jmt9mf.execute-api.eu-central-1.amazonaws.com/v1">
-    <div id="content"></div>
+  <div 
+      hx-headers='{"accept": "text/html"}'
+      hx-get="https://mtsmqwaz00.execute-api.eu-central-1.amazonaws.com/v1/strikes" 
+      hx-trigger="load"
+      hx-swap-oob="innerHTML:#content">
   </div>
+  <div hx-ext="ws" ws-connect="wss://eyx5jmt9mf.execute-api.eu-central-1.amazonaws.com/v1">
+  </div>
+  <div id="content"></div>
 </body>
 
 </html>
